--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/MAP_Debug.MAP_Debug
 EditorStartupMap=/Game/Maps/MAP_Debug.MAP_Debug
+GlobalDefaultGameMode=/Game/GM_Combat.GM_Combat_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
